Fix image heights to prevent stretching

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -256,6 +256,10 @@ body.tao {
         width: 80%;
         min-width: 1024px;
     }
+
+    img {
+        height: auto;
+    }
 }
 
 #main-content {
